--- a/index.html
+++ b/index.html
@@ -10,34 +10,15 @@
 </head>
 
 <body>
-
-    <header class="header">
-        <ul class="menu">
-            <li class="menu-item">Home</li>
-            <li class="menu-item">Galería</li>
-            <li class="menu-item">Contacto</li>
-            <li class="menu-item">About</li>
-
-
-        </ul>
-
-    </header>
-    <section class="container">
-        <section class="content">Contenido</section>
-        <aside class="aside">Aside</aside>
-
-
-    </section>
-    <footer class="footer">Footer</footer>
+    <p> Hola <strong>mamá ya casi</strong> aprendo
+    </p>
+    <p>Este es otro párrafo</p>
 
 
 
 
 
-
-
-
-    <script src="js/app.js"></script>
+    <script src="js/fund.js"></script>
 </body>
 
 </html>
