ejercicio de peso en otro planeta

--- a/index.html
+++ b/index.html
@@ -10,29 +10,8 @@
 </head>
 
 <body>
-
-    <header class="header">
-        <ul class="menu">
-            <li class="menu-item">Home</li>
-            <li class="menu-item">Galería</li>
-            <li class="menu-item">Contacto</li>
-            <li class="menu-item">About</li>
-
-
-        </ul>
-
-    </header>
-    <section class="container">
-        <section class="content">Contenido</section>
-        <aside class="aside">Aside</aside>
-
-
-    </section>
-    <footer class="footer">Footer</footer>
-
-
-
-
+    <h1>Tu peso en otro planeta</h1>
+    <p>En la tierra pesas distino que en Júpiter</p>
 
 
 
