aprendiendo document y window

--- a/index.html
+++ b/index.html
@@ -11,30 +11,7 @@
 
 <body>
 
-    <header class="header">
-        <ul class="menu">
-            <li class="menu-item">Home</li>
-            <li class="menu-item">Galería</li>
-            <li class="menu-item">Contacto</li>
-            <li class="menu-item">About</li>
-
-
-        </ul>
-
-    </header>
-    <section class="container">
-        <section class="content">Contenido</section>
-        <aside class="aside">Aside</aside>
-
-
-    </section>
-    <footer class="footer">Footer</footer>
-
-
-
-
-
-
+    <h1>Vamos a jugar con document y windows</h1>
 
 
     <script src="js/app.js"></script>
